--- a/Project2.html
+++ b/Project2.html
@@ -9,177 +9,170 @@
 </head>
 
 <body>
-  <div class="image-container">
-    <div class="bg-image">
-      <img src="burger logo.png" alt="Logo" class="logo" />
+  <div class="container">
+    <div class="image-container">
+      <div class="bg-image">
+        <img src="burger logo.png" alt="Logo" class="logo" />
 
-      <!-- Nav section -->
-      <div class="navsection">
-        <ul class="navbars">
-          <li><a href="#" id="one">MENU</a></li>
-          <hr />
-          <li><a href="#" id="two">ABOUT US </a></li>
-          <hr />
-          <li><a href="#" id="two">CONTACT</a></li>
-          <hr />
-          <li><a href=" #" id="two">SERVICES</a></li>
-          <hr />
-          <li><a href=" #" id="two">SIGN UP</a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
-
-  <!-- Main content -->
-  <main class="content">
-    <h1>
-      Taste the difference,Bite <br />
-      into something bold and juicy
-    </h1>
-    <h2>
-      Every burger is handcrafted with fresh <br />
-      ingredients and bold flavor
-    </h2>
-    <button id="button1"><a href="#" id="color-btn">View More</a></button>
-  </main>
-
-  <div class="second-frame">
-    <h1>LOREM IPSUM</h1>
-
-    <div class="three-images">
-      <div id="pic1">
-        <img src="small-burger-1.png" />
-        <h1>Lorem Ipsum</h1>
-        <br />
-        <p>
-          consectetur adipiscing elit, sed do<br />
-          eiusmod tempor incididunt ut labore<br />
-          et dolore magna aliqua. Quis ipsum<br />
-          suspendisse ultrices gravida. Risus <br />commodo viverra maecenas.
-        </p>
-      </div>
-
-      <div id="pic1">
-        <img src="small-burger-2.png" />
-        <h1>Lorem Ipsum</h1>
-        <br />
-        <p>
-          consectetur adipiscing elit, sed do<br />
-          eiusmod tempor incididunt ut labore<br />
-          et dolore magna aliqua. Quis ipsum<br />
-          suspendisse ultrices gravida. Risus <br />commodo viverra maecenas.
-        </p>
-      </div>
-
-      <div id="pic1">
-        <img src="small-burger-3.png" />
-        <h1>Lorem Ipsum</h1>
-        <br />
-        <p>
-          consectetur adipiscing elit, sed do<br />
-          eiusmod tempor incididunt ut labore<br />
-          et dolore magna aliqua. Quis ipsum<br />
-          suspendisse ultrices gravida. Risus <br />commodo viverra maecenas.
-        </p>
+        <!-- Nav section -->
+        <div class="navsection">
+          <ul class="navbars">
+            <li><a href="#" id="one">MENU</a></li>
+            <hr />
+            <li><a href="#" id="two">ABOUT US </a></li>
+            <hr />
+            <li><a href="#" id="two">CONTACT</a></li>
+            <hr />
+            <li><a href=" #" id="two">SERVICES</a></li>
+            <hr />
+            <li><a href=" #" id="two">SIGN UP</a></li>
+          </ul>
+        </div>
       </div>
     </div>
 
-    <div class="button-area">
-      <button id="button2">
-        <a href="#" id="color-btn2">View all Offers</a>
-      </button>
-    </div>
-  </div>
+    <!-- Main content -->
+    <main class="content">
+      <h1>
+        Taste the difference,Bite <br />
+        into something bold and juicy
+      </h1>
+      <h2>
+        Every burger is handcrafted with fresh <br />
+        ingredients and bold flavor
+      </h2>
+      <button id="button1"><a href="#" id="color-btn">View More</a></button>
+    </main>
 
-  <div class="Blur-image">
-    <div class="pragraph-section">
-      <h1 id="h1">Sed ut perspiciatis unde omnis iste natus</h1>
-      <p>
-        On the other hand, we denounce with righteous indignation and dislike
-        men who <br />are so beguiled and demoralized by the charms of
-        pleasure of the moment, so<br />
-        blinded by desire, that they cannot foresee.
-      </p>
-    </div>
-  </div>
-
-  <div class="kfc-burgers">
-    <div id="bg-burger">
-      <div id="Two-layer-burger2">
-        <img src="Burger3.png" />
-        <p>Double Patty Burger</p>
-      </div>
-
-      <div id="classic-bu">
-        <img src="Burger2.png" />
-        <p>Classic Chesse Burger</p>
-      </div>
-
-      <div>
-        <img src="Burger3.png" />
-        <p>Double Patty Burger</p>
-      </div>
-    </div>
-  </div>
-
-  <div class="Read-more-section">
-    <div id="image">
-      <img src="big-image.png" />
-    </div>
-
-    <div id="heading1">
-      <h1>Sed ut perspiciatis unde omins</h1>
-      <p>
-        On the other hand, we denounce with righteous <br />
-        indignation and dislike men who are so beguiled <br />
-        and demoralized by the charms of pleasure of the<br />
-        moment, so blinded by desire, that they cannot <br />foresee.
-      </p>
-
-      <div id="button3">
-        <a href="#" id="btn3">Read More</a>
-      </div>
-    </div>
-  </div>
-
-  <div class="frame6">
-    <div class="content6">
+    <div class="second-frame">
       <h1>LOREM IPSUM</h1>
+
+      <div class="three-images">
+        <div id="pic1">
+          <img src="small-burger-1.png" />
+          <h1>Lorem Ipsum</h1>
+          <br />
+          <p>
+            consectetur adipiscing elit, sed do<br />
+            eiusmod tempor incididunt ut labore<br />
+            et dolore magna aliqua. Quis ipsum<br />
+            suspendisse ultrices gravida. Risus <br />commodo viverra maecenas.
+          </p>
+        </div>
+
+        <div id="pic1">
+          <img src="small-burger-2.png" />
+          <h1>Lorem Ipsum</h1>
+          <br />
+          <p>
+            consectetur adipiscing elit, sed do<br />
+            eiusmod tempor incididunt ut labore<br />
+            et dolore magna aliqua. Quis ipsum<br />
+            suspendisse ultrices gravida. Risus <br />commodo viverra maecenas.
+          </p>
+        </div>
+
+        <div id="pic1">
+          <img src="small-burger-3.png" />
+          <h1>Lorem Ipsum</h1>
+          <br />
+          <p>
+            consectetur adipiscing elit, sed do<br />
+            eiusmod tempor incididunt ut labore<br />
+            et dolore magna aliqua. Quis ipsum<br />
+            suspendisse ultrices gravida. Risus <br />commodo viverra maecenas.
+          </p>
+        </div>
+      </div>
+
+      <div class="button-area">
+        <button id="button2">
+          <a href="#" id="color-btn2">View all Offers</a>
+        </button>
+      </div>
     </div>
 
-    <div>
-      <div id="para-left">
-        <h3>But I must explain to you <br />how all this</h3>
-      </div>
-
-      <div id="para-right">
-        <p>But I must explain to you <br />how all this</p>
-      </div>
-
-      <div id="para-left-bottom">
-        <p>But I must explain to you <br />how all this</p>
-      </div>
-
-      <div id="para-right-bottom">
-        <p>But I must explain to you <br />how all this</p>
+    <div class="Blur-image">
+      <div class="pragraph-section">
+        <h1 id="h1">Sed ut perspiciatis unde omnis iste natus</h1>
+        <p>
+          On the other hand, we denounce with righteous indignation and dislike
+          men who <br />are so beguiled and demoralized by the charms of
+          pleasure of the moment, so<br />
+          blinded by desire, that they cannot foresee.
+        </p>
       </div>
     </div>
 
-    <div id="center-image1">
-      <img src="curve line.png" alt="" />
-      <img src="platter-image.png" id="platter" />
+    <div class="kfc-burgers">
+      <div id="bg-burger">
+        <div id="Two-layer-burger2">
+          <img src="Burger3.png" />
+          <p>Double Patty Burger</p>
+        </div>
 
-      <div id="dots-top">
-        <img src="circle1.png" alt="" />
-        <img src="circle1.png" alt="" />
+        <div id="classic-bu">
+          <img src="Burger2.png" />
+          <p>Classic Chesse Burger</p>
+        </div>
+
+        <div id="classic-bu">
+          <img src="Burger3.png" />
+          <p>Double Patty Burger</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="frame5">
+      <div id="text-frame5">
+        <h1>Sed ut perspiciatis unde omnis</h1>
+        <p>On the other hand, we denounce with righteous<br>
+          indignation and dislike men who are so beguiled<br>
+          and demoralized by the charms of pleasure of the <br>
+          moment, so blinded by desire, that they cannot <br>
+          foresee.</p>
+
+        <div id="button3">
+          <a href="#" id="btn3">Read More</a>
+        </div>
+
+      </div>
+      <div id="frame5-img">
+        <img src="big-image.png" id="big-burger-img">
+      </div>
+    </div>
+
+    <div class="frame6">
+      <div class="content6">
+        <h1>LOREM IPSUM</h1>
       </div>
 
-      <div id="dots-bottom">
-        <img src="circle1.png" alt="" />
-        <img src="circle1.png" alt="" />
-      </div>
+      <div class="platee">
+        <div id="corner-text">
+
+          <div id="left-text">
+            <h1>But I must explain to you<br> how all this</h1>
+
+            <div id="left-bottom">
+              <h1>But all this <br>mistaken ideas</h1>
+            </div>
+            
+          </div>
+
+          <div id="complex-img">
+            <img src="design.png" id="img1 ">
+          </div>
+
+          <div id="right-text">
+            <h1>But I must explain to you<br> how all this</h1>
+            <div id="left-bottom">
+              <h1>But all this <br>mistaken ideas</h1>
+            </div>
+          </div>
+        </div>
     </div>
   </div>
+
 
   <div class="frame7">
     <div id="heading7">
@@ -200,7 +193,7 @@
 
       <div id="last-two">
         <input type="text" placeholder="NAME" id="first-input" />
-        <button id="button4">SEND</button>
+        <button id="button4"><a href="#">SEND</a></button>
       </div>
 
     </div>
@@ -215,8 +208,7 @@
   </div>
 
   <footer>
-   
-    <div class="footer">
+    <div class="Bottom-work">
       <div id="bottom-nav">
         <ul>
           <li><a href="#">HOME</a></li>
@@ -225,35 +217,30 @@
           <li><a href="#">MENU</a></li>
           <li><a href="#">CONTACT US</a></li>
         </ul>
-      </div>
 
-      <div id="search-bar">
-        <input type="text" id="typebar">
-        <button id="search-button">Search</button>
-      </div>
-
-      <div id="three-logos">
-
-        <div id="logo-text1">
-          <img src="facebook22.png">
-          <p>Follow on Facebook</p>
+        <div id="search-bar">
+          <div id="frame-search">
+            <input type="text" id="typebar">
+            <button id="search-button"><a href="#">Search</a></button>
+          </div>
         </div>
 
-        <div id="logo-text2">
-          <img src="twiiter-logo.png">
-          <p>Follow on Twitter</p>
-        </div>
+        <div id="three-logos">
 
-        <div id="logo33">
-          <img src="insta-lo.png">
-          <p>Follow on Instagram</p>
+          <div id="img-text"><img src="facebook22.png" alt="">Follow on Facebook</div>
+          <div id="img-text"><img src="twiiter-logo.png" alt="">Follow on Facebook</div>
+          <div id="img-text"><img src="insta-lo.png" alt="">Follow on Facebook</div>
+
         </div>
 
       </div>
 
+      <div id="last-text">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur vitae consequuntur, accusantium dolor</p>
+      </div>
     </div>
-
   </footer>
+</div>
 </body>
 
 </html>
