--- a/Project2.html
+++ b/Project2.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Document</title>
   <link rel="stylesheet" href="Project2.css" />
+  <!-- Font Awesome CDN -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
 </head>
 
 <body>
@@ -23,13 +26,22 @@
             <hr />
             <li><a href="#" id="two">CONTACT</a></li>
             <hr />
-            <li><a href=" #" id="two">SERVICES</a></li>
+            <li><a href="#" id="two">SERVICES</a></li>
             <hr />
-            <li><a href=" #" id="two">SIGN UP</a></li>
+            <li><a href="#" id="two">SIGN UP</a></li>
           </ul>
+
+          <div class="font-awesome">
+            <i class="fa-solid fa-bars" id="menu-logo"></i>
+
+          </div>
+
+
         </div>
       </div>
+
     </div>
+
 
     <!-- Main content -->
     <main class="content">
@@ -41,7 +53,13 @@
         Every burger is handcrafted with fresh <br />
         ingredients and bold flavor
       </h2>
-      <button id="button1"><a href="#" id="color-btn">View More</a></button>
+
+      <div class="button1">
+        <a href="#">
+          <button id="button1">View More</button>
+        </a>
+      </div>
+
     </main>
 
     <div class="second-frame">
@@ -86,9 +104,10 @@
       </div>
 
       <div class="button-area">
-        <button id="button2">
-          <a href="#" id="color-btn2">View all Offers</a>
-        </button>
+
+        <a href="#" id="color-btn2">
+          <button id="button2">View all Offers</button>
+        </a>
       </div>
     </div>
 
@@ -124,6 +143,7 @@
     </div>
 
     <div class="frame5">
+
       <div id="text-frame5">
         <h1>Sed ut perspiciatis unde omnis</h1>
         <p>On the other hand, we denounce with righteous<br>
@@ -140,6 +160,7 @@
       <div id="frame5-img">
         <img src="big-image.png" id="big-burger-img">
       </div>
+
     </div>
 
     <div class="frame6">
@@ -156,7 +177,7 @@
             <div id="left-bottom">
               <h1>But all this <br>mistaken ideas</h1>
             </div>
-            
+
           </div>
 
           <div id="complex-img">
@@ -170,77 +191,77 @@
             </div>
           </div>
         </div>
-    </div>
-  </div>
-
-
-  <div class="frame7">
-    <div id="heading7">
-      <h1>LOREM IPSUM</h1>
+      </div>
     </div>
 
-    <div id="text-box-section">
 
-      <div id="top-two">
-        <input type="text" placeholder="NAME" id="first-input" />
-        <input type="text" placeholder="NAME" id="first-input" />
+    <div class="frame7">
+      <div id="heading7">
+        <h1>LOREM IPSUM</h1>
       </div>
 
-      <div id="middle-two">
-        <input type="text" placeholder="NAME" id="first-input" />
-        <input type="text" placeholder="NAME" id="first-input" />
-      </div>
+      <div id="text-box-section">
 
-      <div id="last-two">
-        <input type="text" placeholder="NAME" id="first-input" />
-        <button id="button4"><a href="#">SEND</a></button>
-      </div>
+        <div id="top-two">
+          <input type="text" placeholder="NAME" id="first-input" />
+          <input type="text" placeholder="PH.NO" id="first-input" />
+        </div>
 
+        <div id="middle-two">
+          <input type="text" placeholder="ADDRESS" id="first-input" />
+          <input type="text" placeholder="EMAIL" id="first-input" />
+        </div>
+
+        <div id="last-two">
+          <input type="text" placeholder="CITY" id="first-input" />
+          <button id="button4"><a href="#">SEND</a></button>
+        </div>
+
+      </div>
     </div>
-  </div>
 
 
-  <div class="map">
-    <iframe
-      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d857.7847026462746!2d76.8490151!3d30.686370300000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390f93e2df8e1b45%3A0x3f7f23811e5a31e2!2s%F0%9D%90%83aira%20%F0%9D%90%93ech%20%F0%9D%90%92kills%20%F0%9D%90%80cademy%20%7C%20Digital%20Marketing%20%7C%20Graphics%20Designing%20%7C%20Video%20Editing%20%7C%20Web%20Development%20institute%20in%20Panchkula!5e0!3m2!1sen!2sin!4v1753371720988!5m2!1sen!2sin"
-      width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-      referrerpolicy="no-referrer-when-downgrade"></iframe>
-  </div>
+    <div class="map">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d857.7847026462746!2d76.8490151!3d30.686370300000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390f93e2df8e1b45%3A0x3f7f23811e5a31e2!2s%F0%9D%90%83aira%20%F0%9D%90%93ech%20%F0%9D%90%92kills%20%F0%9D%90%80cademy%20%7C%20Digital%20Marketing%20%7C%20Graphics%20Designing%20%7C%20Video%20Editing%20%7C%20Web%20Development%20institute%20in%20Panchkula!5e0!3m2!1sen!2sin!4v1753371720988!5m2!1sen!2sin"
+        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
 
-  <footer>
-    <div class="Bottom-work">
-      <div id="bottom-nav">
-        <ul>
-          <li><a href="#">HOME</a></li>
-          <li><a href="#">ABOUT US</a></li>
-          <li><a href="#">SERVICES</a></li>
-          <li><a href="#">MENU</a></li>
-          <li><a href="#">CONTACT US</a></li>
-        </ul>
+    <footer>
+      <div class="Bottom-work">
+        <div id="bottom-nav">
+          <ul>
+            <li><a href="#">HOME</a></li>
+            <li><a href="#">ABOUT US</a></li>
+            <li><a href="#">SERVICES</a></li>
+            <li><a href="#">MENU</a></li>
+            <li><a href="#">CONTACT US</a></li>
+          </ul>
 
-        <div id="search-bar">
-          <div id="frame-search">
-            <input type="text" id="typebar">
-            <button id="search-button"><a href="#">Search</a></button>
+          <div id="search-bar">
+            <div id="frame-search">
+              <input type="text" id="typebar">
+              <button id="search-button"><a href="#">Search</a></button>
+            </div>
           </div>
+
+          <div id="three-logos">
+
+            <div id="img-text"><img src="facebook22.png" alt="">Follow on Facebook</div>
+            <div id="img-text"><img src="twiiter-logo.png" alt="">Follow on Facebook</div>
+            <div id="img-text"><img src="insta-lo.png" alt="">Follow on Facebook</div>
+
+          </div>
+
         </div>
 
-        <div id="three-logos">
-
-          <div id="img-text"><img src="facebook22.png" alt="">Follow on Facebook</div>
-          <div id="img-text"><img src="twiiter-logo.png" alt="">Follow on Facebook</div>
-          <div id="img-text"><img src="insta-lo.png" alt="">Follow on Facebook</div>
-
+        <div id="last-text">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur vitae consequuntur, accusantium dolor</p>
         </div>
-
       </div>
-
-      <div id="last-text">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur vitae consequuntur, accusantium dolor</p>
-      </div>
-    </div>
-  </footer>
-</div>
+    </footer>
+  </div>
 </body>
 
 </html>
