--- a/index1.html
+++ b/index1.html
@@ -11,22 +11,46 @@
 <body>
     <div class="container">
         <div class="navbar">
-            <div class="nav-logo-text">
-                <img src="">
-                <h1>Toolify AI</h1>
+            <div class="logo_text">
+                <img src="Logo-removebg-preview.png" width="70" height="70">
+                <h3>Lost & Found Portal</h3>
             </div>
+            <ul>
+                <a href="#">
+                    <li>Home</li>
+                </a>
+                <a href="#">
+                    <li>Report Lost</li>
+                </a>
+                <a href="#">
+                    <li>Report Found</li>
+                </a>
+                <a href="#">
+                    <li>Search Items</li>
+                </a>
+                <a href="#">
+                    <li>Help</li>
+                </a>
+            </ul>
+        </div>
+        <div class="main-content">
+            <h1>Lost Something? Found Something? Let’s Reconnect!</h1>
+            <h2>Report lost or found items easily and help your friends on campus.</h2>
+        </div>
 
-            <div class="nav-section">
-                <ul>
-                    <a href="#"><li>Home</li></a>
-                    <a href="#"><li>Tools</li></a>
-                    <a href="#"><li>Categories</li></a>
-                    <a href="#"><li>About</li></a>
-                </ul>
-            </div>
-        </div></li>
+        <div class="buttons_sections">
+            <a href="#" id="btn1">Report Lost</a>
+            <a href="#" id="btn1">Report Found</a>
+        </div>
+
+        <div class="image">
+            <img src="daniel-liberty-BZMtH0crhAU-unsplash.jpg">
+        </div>
+
+
 
     </div>
+
 </body>
 
 </html>
