--- a/index1.html
+++ b/index1.html
@@ -19,7 +19,7 @@
                 <a href="#">
                     <li>Home</li>
                 </a>
-                <a href="#">
+                <a href="report_lost.html">
                     <li>Report Lost</li>
                 </a>
                 <a href="#">
@@ -33,21 +33,90 @@
                 </a>
             </ul>
         </div>
-        <div class="main-content">
-            <h1>Lost Something? Found Something? Let’s Reconnect!</h1>
-            <h2>Report lost or found items easily and help your friends on campus.</h2>
+        <div class="second">
+            <div class="main-content">
+                <h1>Lost Something? Found Something? Let’s Reconnect!</h1>
+                <h2>Report lost or found items easily and help your friends on campus.</h2>
+            </div>
+
+            <div class="buttons_sections">
+                <a href="report_lost.html" id="btn1">Report Lost</a>
+                <a href="#" id="btn1">Report Found</a>
+                <a href="#" id="btn2">Search Items</a>
+            </div>
         </div>
 
-        <div class="buttons_sections">
-            <a href="#" id="btn1">Report Lost</a>
-            <a href="#" id="btn1">Report Found</a>
+        <!-- <div class="how_work">
+            <h1>How It Works </h1>
+            <div id="explain">
+                <ul>
+                    <li>Report :- Fill details of lost/found item.</li>
+                    <li>Search & Match :- Portal matches items automatically</li>
+                    <li>Reconnect :-Contact the owner/finder to return.</li>
+                </ul>
+            </div>
+        </div> -->
+
+        <div class="success_rate">
+            <div class="heading">
+                 <h1>Success Stories</h1>
+            </div>
+           
+            <div class="three_boxs">
+                <div id="boxes">
+                    <div class="two_images">
+                        <img src="man.png" id="avtar" height="50">
+                        <img src="five_star.png" width="120" height="20">
+                    </div>
+
+                    <div id="box1_text">
+                        <p>I lost my keys and found them a day later <br>through this site! It's a lifesaver</p>
+                    </div>
+
+                    <div id="five_star">
+                        <img src="five_star.png" id="stars" width="120" height="20">
+                    </div>
+                </div>
+
+
+                <div id="boxes">
+                    <div class="two_images">
+                        <img src="man.png" id="avtar" height="50">
+                        <img src="five_star.png" width="120" height="20">
+                    </div>
+
+                    <div id="box1_text">
+                        <p>I lost my keys and found them a day later <br>through this site! It's a lifesaver</p>
+                    </div>
+
+                    <div id="five_star">
+                        <img src="five_star.png" id="stars" width="120" height="20">
+                    </div>
+                </div>
+
+
+                <div id="boxes">
+                    <div class="two_images">
+                        <img src="man.png" id="avtar" height="50">
+                        <img src="five_star.png" width="120" height="20">
+                    </div>
+
+                    <div id="box1_text">
+                        <p>I lost my keys and found them a day later <br>through this site! It's a lifesaver</p>
+                    </div>
+
+                    <div id="five_star">
+                        <img src="five_star.png" id="stars" width="120" height="20">
+                    </div>
+                </div>
+            </div>
         </div>
 
-        <div class="image">
-            <img src="daniel-liberty-BZMtH0crhAU-unsplash.jpg">
-        </div>
+        <footer>
+            <div class="first_footer">
 
-
+            </div>
+        </footer>
 
     </div>
 
