report_found.html

--- a/report_found.html
+++ b/report_found.html
@@ -25,10 +25,10 @@
                 <a href="report_found.html">
                     <li>Report Found</li>
                 </a>
-                <a href="#">
+                <a href="search_item.html">
                     <li>Search Items</li>
                 </a>
-                <a href="#">
+                <a href="">
                     <li>Help</li>
                 </a>
             </ul>
@@ -99,21 +99,17 @@
                             <input type="text">
                         </div>
 
-                        <label>Phone Number</label>
-                        <input type="text">
+                        <div id="ph">
+                            <label>Phone Number</label>
+                            <input type="text">
+                        </div>
+
                     </div>
                 </div>
 
                 <div class="submit_btn">
-                    <a href="#">Submit Report</a>
+                    <a href="#"><button id="upload">Submit Report</button></a>
                 </div>
-
-
-
-
-
-
-
             </div>
         </div>
 
