search_item.html

--- a/search_item.html
+++ b/search_item.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="report_found.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+
 </head>
 
 <body style="background-color: rgb(119, 137, 177);">
@@ -34,11 +36,79 @@
             </ul>
         </div>
 
-        <div class="search_header">
-            <h1>Search Items</h1>
+
+        <div class="fill_sec">
+            <div class="search_hold_section">
+                <div class="search_header">
+                    <h1>Search Items</h1>
+                </div>
+
+                <div class="search_sec">
+                    <input type="text" placeholder="Search by Keyboard...">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </div>
+
+                <div class="section_part">
+
+                    <div class="firs">
+                        <h2>Status:</h2>
+                        <select>
+                            <option></option>
+                        </select>
+                    </div>
+
+                    <div class="seco">
+                        <h2>Category:</h2>
+                        <select>
+                            <option></option>
+                        </select>
+                    </div>
+
+                    <div class="thir">
+                        <h2>Location:</h2>
+                        <input type="text">
+                    </div>
+                </div>
+
+                <div class="date_Sec">
+                    <h2>Date</h2>
+                </div>
+
+                <div class="image_containers1">
+                    <div class="frame1">
+                        <img src="watch.jpg" width="150" height="110">
+
+                    </div>
+
+                    <div class="frame1">
+                        <img src="watch.jpg" width="150" height="110">
+                    </div>
+
+                    <div class="frame1">
+                        <img src="watch.jpg" width="150" height="110">
+                    </div>
+                </div>
+
+                <div class="image_containers2">
+                    <div class="frame1">
+                        <img src="watch.jpg" width="150" height="110">
+                    </div>
+
+                    <div class="frame1">
+                        <img src="watch.jpg" width="150" height="110">
+                    </div>
+
+                    <div class="frame1">
+                        <img src="watch.jpg" width="150" height="110">
+                    </div>
+                </div>
+
+
+            </div>
+
+
+
         </div>
-
-
 
 
 
