--- a/search_item.html
+++ b/search_item.html
@@ -76,30 +76,131 @@
 
                 <div class="image_containers1">
                     <div class="frame1">
-                        <img src="watch.jpg" width="150" height="110">
+                        <div class="image">
+                            <img src="watch.jpg" width="150" height="110">
+                        </div>
+
+                        <div id="heading">
+                            <h2>Watch</h2>
+                        </div>
+
+                        <div class="detl1">
+                            <h3>Status: </h3>
+                            <h3>Location: </h3>
+                            <h3>Date: </h3>
+                        </div>
+
+                        <div class="claim_btn">
+                            <a href="#"><button id="claim_btn">Claim This Item</button></a>
+                        </div>
 
                     </div>
 
                     <div class="frame1">
-                        <img src="watch.jpg" width="150" height="110">
+                        <div class="image">
+                            <img src="watch.jpg" width="150" height="110">
+                        </div>
+
+                        <div id="heading">
+                            <h2>Watch</h2>
+                        </div>
+
+                        <div class="detl1">
+                            <h3>Status: </h3>
+                            <h3>Location: </h3>
+                            <h3>Date: </h3>
+                        </div>
+
+                        <div class="claim_btn">
+                            <a href="#"><button id="claim_btn">Claim This Item</button></a>
+                        </div>
+
                     </div>
 
                     <div class="frame1">
-                        <img src="watch.jpg" width="150" height="110">
+                        <div class="image">
+                            <img src="watch.jpg" width="150" height="110">
+                        </div>
+
+                        <div id="heading">
+                            <h2>Watch</h2>
+                        </div>
+
+                        <div class="detl1">
+                            <h3>Status: </h3>
+                            <h3>Location: </h3>
+                            <h3>Date: </h3>
+                        </div>
+
+                        <div class="claim_btn">
+                            <a href="#"><button id="claim_btn">Claim This Item</button></a>
+                        </div>
+
                     </div>
                 </div>
 
                 <div class="image_containers2">
                     <div class="frame1">
-                        <img src="watch.jpg" width="150" height="110">
+                        <div class="image">
+                            <img src="watch.jpg" width="150" height="110">
+                        </div>
+
+                        <div id="heading">
+                            <h2>Watch</h2>
+                        </div>
+
+                        <div class="detl1">
+                            <h3>Status: </h3>
+                            <h3>Location: </h3>
+                            <h3>Date: </h3>
+                        </div>
+
+                        <div class="claim_btn">
+                            <a href="#"><button id="claim_btn">Claim This Item</button></a>
+                        </div>
+
                     </div>
 
                     <div class="frame1">
-                        <img src="watch.jpg" width="150" height="110">
+                        <div class="image">
+                            <img src="watch.jpg" width="150" height="110">
+                        </div>
+
+                        <div id="heading">
+                            <h2>Watch</h2>
+                        </div>
+
+                        <div class="detl1">
+                            <h3>Status: </h3>
+                            <h3>Location: </h3>
+                            <h3>Date: </h3>
+                        </div>
+
+                        <div class="claim_btn">
+                            <a href="#"><button id="claim_btn">Claim This Item</button></a>
+                        </div>
+
                     </div>
 
                     <div class="frame1">
-                        <img src="watch.jpg" width="150" height="110">
+                        <div class="image">
+                            <img src="watch.jpg" width="150" height="110">
+                        </div>
+
+                        <div id="heading">
+                            <h2>Watch</h2>
+                        </div>
+
+                        <div class="detl1">
+                            <h3>Status: </h3>
+                            <h3>Location: </h3>
+                            <h3>Date: </h3>
+                        </div>
+
+                        <div class="claim_btn">
+                            <a href="#"><button id="claim_btn">Claim This Item</button></a>
+                        </div>
+
                     </div>
                 </div>
 
