report_found.html

--- a/report_found.html
+++ b/report_found.html
@@ -75,7 +75,7 @@
                                 <input type="datetime-local" id="meeting" name="meeting">
                             </form>
 
-                            <a href="#">Preview Image</a>
+                            <a href="#" id="preview">Preview Image</a>
                             <img src="empty_image_logo.png" height="120">
                         </div>
                     </div>
