--- a/index1.html
+++ b/index1.html
@@ -16,16 +16,16 @@
                 <h3>Lost & Found Portal</h3>
             </div>
             <ul>
-                <a href="#">
+                <a href="index1.html">
                     <li>Home</li>
                 </a>
                 <a href="report_lost.html">
                     <li>Report Lost</li>
                 </a>
-                <a href="#">
+                <a href="report_found.html">
                     <li>Report Found</li>
                 </a>
-                <a href="#">
+                <a href="search_item.html">
                     <li>Search Items</li>
                 </a>
                 <a href="#">
@@ -41,27 +41,16 @@
 
             <div class="buttons_sections">
                 <a href="report_lost.html" id="btn1">Report Lost</a>
-                <a href="#" id="btn1">Report Found</a>
-                <a href="#" id="btn2">Search Items</a>
+                <a href="report_found.html" id="btn1">Report Found</a>
+                <a href="search_item.html" id="btn2">Search Items</a>
             </div>
         </div>
 
-        <!-- <div class="how_work">
-            <h1>How It Works </h1>
-            <div id="explain">
-                <ul>
-                    <li>Report :- Fill details of lost/found item.</li>
-                    <li>Search & Match :- Portal matches items automatically</li>
-                    <li>Reconnect :-Contact the owner/finder to return.</li>
-                </ul>
-            </div>
-        </div> -->
-
         <div class="success_rate">
             <div class="heading">
-                 <h1>Success Stories</h1>
+                <h1>Success Stories</h1>
             </div>
-           
+
             <div class="three_boxs">
                 <div id="boxes">
                     <div class="two_images">
@@ -114,7 +103,23 @@
 
         <footer>
             <div class="first_footer">
+                <div class="copyright_sec">
+                    <h2>© 2025</h2>
+                    <h2>Lost & Found Portal</h2>
+                </div>
 
+
+                <div class="icons">
+                    <a href="#"><img src="facebookicon.png" width="50"></a>
+                    <a href="#"><img src="x_icon.png" width="50"></a>
+                    <a href="#"><img src="Instagram_icon.png" width="50"></a>
+                </div>
+
+                <div class="footer_nav">
+                    <a href="#">About us</a>
+                    <a href="#">Contact</a>
+                    <a href="#">Privacy Policy</a>
+                </div>
             </div>
         </footer>
 
