report_lost.html

--- a/report_lost.html
+++ b/report_lost.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="report_lost.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+
 </head>
 
 <body>
@@ -69,7 +71,7 @@
                 </div>
 
                 <div id="upload_section">
-                    <a href="#"><img src="upload_logo.png"></a>
+                    <a href="#"><i class="fa-solid fa-upload"></i></a>
                     <div id="browse">
                         <h3>UPLOAD PHOTO</h3>
                         <h4>Browse Files</h4>
@@ -100,17 +102,35 @@
                 </div>
 
                 <div class="button">
-                   <a href="#"><button id="upload">SUBMIT REPORT </button></a>
+                    <a href="#"><button id="upload">SUBMIT REPORT </button></a>
                 </div>
             </div>
         </div>
 
 
+        <footer>
+            <div class="first_footer">
+                <div class="copyright_sec">
+                    <h2>© 2025</h2>
+                    <h2>Lost & Found Portal</h2>
+                </div>
 
+
+                <div class="icons">
+                    <a href="#"><img src="facebookicon.png" width="50"></a>
+                    <a href="#"><img src="x_icon.png" width="50"></a>
+                    <a href="#"><img src="Instagram_icon.png" width="50"></a>
+                </div>
+
+                <div class="footer_nav">
+                    <a href="#">About us</a>
+                    <a href="#">Contact</a>
+                    <a href="#">Privacy Policy</a>
+                </div>
+            </div>
+        </footer>
+        
     </div>
-
-
-
 </body>
 
 </html>
