--- a/report_found.html
+++ b/report_found.html
@@ -114,10 +114,27 @@
         </div>
 
 
+        <footer>
+            <div class="first_footer">
+                <div class="copyright_sec">
+                    <h2>© 2025</h2>
+                    <h2>Lost & Found Portal</h2>
+                </div>
 
 
+                <div class="icons">
+                    <a href="#"><img src="facebookicon.png" width="50"></a>
+                    <a href="#"><img src="x_icon.png" width="50"></a>
+                    <a href="#"><img src="Instagram_icon.png" width="50"></a>
+                </div>
 
-
+                <div class="footer_nav">
+                    <a href="#">About us</a>
+                    <a href="#">Contact</a>
+                    <a href="#">Privacy Policy</a>
+                </div>
+            </div>
+        </footer>
     </div>
 
 </body>
